--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body{
   background-attachment: scroll;
   font-size: 14px;
   font-family: 'Kosugi Maru', sans-serif;
+  color: #0A0909;
   }
 
 
@@ -18,6 +19,7 @@ body{
   width: 80%;
   margin-top: 100px;
   height: 600px;
+  position: relative;
 }
 
 #scoreboard{
@@ -87,10 +89,59 @@ cursor: pointer;
     border: none;
     opacity: 0.4;
     border: 2px solid #DCDCDC;
-    
+
   }
   #wrapper-footer{
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
+  #logo-style{
+    font-size: 3rem;
+    border-bottom: 2px dashed #BA0016;
+    margin: 20px;
+    color:#310000;
+  }
+
+  #wrapper-menu{
+  visibility: hidden;
+  box-sizing:border-box;
+  background: white;
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  width: 100%;
+  height: 100%;
+  border:  20px ridge #9A9A9A;
+  }
+
+  #wrapper-menu ul{
+    padding: 0;
+    margin-top: 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    }
+  #wrapper-menu li{
+      box-sizing:border-box;
+      font-size: 2rem;
+      padding: 20px;
+      list-style-type: none;
+      font-family: 'Kosugi Maru', sans-serif;
+      cursor: pointer;
+      border-bottom: 2px solid white;
+
+
+    }
+    #wrapper-menu li:hover{
+      color: #BA0016;
+      border-bottom: 2px solid #BA0016;
+
+    }
+
+  #back-button:hover{
+      border: none !important;
+    }
+
+ @keyframes move_menu { from { opacity: 0; } to { opacity: 1; }  }
