--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body{
 
 #wapper-main{
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 
@@ -116,11 +117,12 @@ cursor: pointer;
   width: 100%;
   height: 100%;
   border:  20px ridge #9A9A9A;
+  z-index: 1;
   }
 
   #wrapper-menu ul{
     padding: 0;
-    margin-top: 80px;
+    margin-top: 40px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -228,9 +230,7 @@ to {position: relative; bottom:0;}
   box-sizing: border-box;
   font-size: 2rem;
   padding: 20px;
-  margin-top: 80px;
   font-family: 'Kosugi Maru', sans-serif;
-  border-bottom: 2px solid white;
   display: none;
 }
 
@@ -297,12 +297,11 @@ to {position: relative; bottom:0;}
     border: 60px solid #40c4c8;
     padding: 60px;
     border-image: url(assets/ornament1.png) 60 round round;
-
     display: none;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    z-index: 2;
+    z-index: 1;
 }
 
 #congratulation-logo{
@@ -320,4 +319,37 @@ to {position: relative; bottom:0;}
   margin-top: 20px;
   font-size: 2rem;
   cursor: pointer;
+}
+
+
+#change-block-records{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  font-size: 2rem;
+  padding: 20px;
+  width: 100%;
+  font-family: 'Kosugi Maru', sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+#back-button-records{
+  font-size: 2rem;
+  cursor: pointer;
+  margin-top: 20px;
+}
+
+#records-table{
+display:block;
+table-layout: auto;
+font-size: 1.3rem;
+
+}
+
+#records-table td {
+  padding: 5px 30px;
+  border-bottom: 2px dashed #BA0016;
 }
