--- a/style.css
+++ b/style.css
@@ -19,9 +19,11 @@ body{
   background: white;
   width: 80%;
   margin-top: 100px;
-
   position: relative;
+
 }
+
+
 
 #scoreboard{
 font-size: 1.2rem;
@@ -99,7 +101,22 @@ cursor: pointer;
     align-items: center;
     background: white;
     border-top: 2px dashed #BA0016;
+    visibility: hidden;
   }
+
+  #open-close-menu{
+    color: #BA0016;
+    background: white;
+    margin: 0;
+    border: 2px solid #BA0016;
+    font-size: 1rem;
+  }
+.wrapper-all-footer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.2rem;
+}
   #logo-style{
     font-size: 3rem;
     border-bottom: 2px dashed #BA0016;
